--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -16,6 +16,8 @@ jobs:
 
       - uses: actions/checkout@v3
         if: success() || failure()
+        env:
+          BASE_URL: ${{ secrets.BASE_URL }}
       - run: |
           cd tests
           mkdir -p reports
