--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v3
         if: success() || failure()
         env:
-          BASE_URL: ${{ secrets.BASE_URL }}
+          URL: ${{ secrets.URL }}
       - run: |
           cd tests
           mkdir -p reports
