--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,5 +1,9 @@
 name: selenium_tutorial
 on: [push]
+
+env:
+  BASE_URL: ${{ secrets.BASE_URL }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,8 +20,6 @@ jobs:
 
       - uses: actions/checkout@v3
         if: success() || failure()
-        env:
-          URL: ${{ secrets.URL }}
       - run: |
           cd tests
           mkdir -p reports
