--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@ pytest>=7.4.2
 selenium>=4.13.0
 webdriver-manager>=4.0.1
 pytest-html==4.0.2
+coverage>=6.0
+pytest-json-report>=1.5.0
+requests>=2.28.0
+reportlab>=3.6.0
